[package]
name = "dryinstall-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
seccomp = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
